# YoutubeTranscriptSummarizer

./: .gitignore  LICENSE  README.md  Summarizer.py  pyproject.toml
src/: app.py  apporig.py
src/services/: gemini_service.py
src/utils/: transcript_utils.py
